// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component with custom page options 1`] = `
<ResultsPerPage
  onChange={[Function]}
  options={
    Array [
      5,
      10,
      15,
    ]
  }
  results={
    Array [
      Object {},
      Object {},
    ]
  }
  searchTerm="test"
  value={10}
  viewHelpers={
    Object {
      "appendClassName": [Function],
      "getEscapedField": [Function],
      "getEscapedFields": [Function],
      "getFieldType": [Function],
      "getFilterValueDisplay": [Function],
      "getRaw": [Function],
      "getSnippet": [Function],
      "getSuggestionTitle": [Function],
      "getUrlSanitizer": [Function],
      "htmlEscape": [Function],
      "isFieldValueWrapper": [Function],
    }
  }
/>
`;

exports[`renders when it doesn't have any results or a search term 1`] = `
<ResultsPerPage
  onChange={[Function]}
  options={
    Array [
      20,
      40,
      60,
    ]
  }
  results={Array []}
  searchTerm=""
  value={20}
  viewHelpers={
    Object {
      "appendClassName": [Function],
      "getEscapedField": [Function],
      "getEscapedFields": [Function],
      "getFieldType": [Function],
      "getFilterValueDisplay": [Function],
      "getRaw": [Function],
      "getSnippet": [Function],
      "getSuggestionTitle": [Function],
      "getUrlSanitizer": [Function],
      "htmlEscape": [Function],
      "isFieldValueWrapper": [Function],
    }
  }
/>
`;

exports[`supports a render prop 1`] = `
<div>
  20
</div>
`;
